fix: fixed modal? on mobile?

--- a/web/src/assets/scss/app.scss
+++ b/web/src/assets/scss/app.scss
@@ -2,8 +2,27 @@
 @import 'utl';
 
 * {
-    font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif;
 
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.el-dialog {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  max-height: 80%;
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 767px) {
+  .el-dialog {
+    max-width: 90%;
+    max-height: 90%;
+  }
 }
